--- a/protobuf/CMakeLists.txt
+++ b/protobuf/CMakeLists.txt
@@ -1,5 +1,3 @@
-include_directories(${CMAKE_SOURCE_DIR})
-
 add_library(proto
     ProtobufCodec.h
     ProtobufDispatcher.h
@@ -12,6 +10,7 @@ protobuf_generate(
     PROTOS ${CMAKE_CURRENT_SOURCE_DIR}/BikeSharing.proto)
 
 target_link_libraries(proto protobuf::libprotobuf ${MUDUO_BASE} ${MUDUO_NET})
+target_include_directories(proto PUBLIC ${CMAKE_SOURCE_DIR})
 target_include_directories(proto INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(test)
