--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(testServer test.cpp Client.cpp)
+add_executable(testServer testServer.cpp Client.cpp)
 target_link_libraries(testServer
     proto)
 target_include_directories(testServer PRIVATE ${CMAKE_SOURCE_DIR})
